--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon server.js",
     "seed": "node seed/seedData.js"
   },
+    "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": ["competency", "assessment", "hr"],
   "author": "",
   "license": "ISC",
